tests/ui/use/attr-in-use-tree.stderr
error: expected identifier, found `#`
  --> $DIR/attr-in-use-tree.rs:4:5
   |
LL |     #[cfg(true)]
   |     ^ expected identifier

error: aborting due to 1 previous error

